--- a/src/sample/FXML/data_load.fxml
+++ b/src/sample/FXML/data_load.fxml
@@ -24,7 +24,7 @@
                     <graphic>
                         <ImageView fitHeight="20.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
                             <image>
-                                <Image url="/MDicon/ic_launcher.png" />
+                                <Image url="/sample/resources/MDicon/ic_launcher.png" />
                             </image>
                         </ImageView>
                     </graphic>
@@ -33,7 +33,7 @@
                     <graphic>
                         <ImageView fitHeight="20.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
                             <image>
-                                <Image url="/MDicon/qweas.png" />
+                                <Image url="/sample/resources/MDicon/qweas.png" />
                             </image>
                         </ImageView>
                     </graphic>
@@ -42,7 +42,7 @@
                     <graphic>
                         <ImageView fitHeight="20.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
                             <image>
-                                <Image url="/MDicon/arrow.png" />
+                                <Image url="/sample/resources/MDicon/arrow.png" />
                             </image>
                         </ImageView>
                     </graphic>
@@ -51,7 +51,7 @@
                     <graphic>
                         <ImageView fitHeight="20.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
                             <image>
-                                <Image url="/MDicon/bin.png" />
+                                <Image url="/sample/resources/MDicon/bin.png" />
                             </image>
                         </ImageView>
                     </graphic>
@@ -60,14 +60,14 @@
                     <graphic>
                         <ImageView fitHeight="20.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
                             <image>
-                                <Image url="/MDicon/qweas.png" />
+                                <Image url="/sample/resources/MDicon/qweas.png" />
                             </image>
                         </ImageView>
                     </graphic>
                 </JFXButton>
                 <ImageView fx:id="color_picker1" fitHeight="28.0" fitWidth="28.0" layoutX="137.0" layoutY="668.0" onMouseClicked="#colorPicker" pickOnBounds="true" preserveRatio="true">
                     <image>
-                        <Image url="/MDicon/color_picker.png" />
+                        <Image url="/sample/resources/MDicon/color_picker.png" />
                     </image>
                 </ImageView>
                 <JFXDrawer fx:id="drawer1" layoutY="500.0" prefHeight="200.0" prefWidth="130.0" />
@@ -79,7 +79,7 @@
                     <children>
                         <ImageView fitHeight="36.0" fitWidth="36.0" layoutX="565.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true">
                             <image>
-                                <Image url="/MDicon/cloud.png" />
+                                <Image url="/sample/resources/MDicon/cloud.png" />
                             </image>
                         </ImageView>
                         <Label layoutX="38.0" layoutY="13.0" text="DETAILS" textFill="WHITE" />
@@ -103,7 +103,7 @@
                 <Label layoutX="24.0" layoutY="13.0" text="DATA HEADERS" textFill="WHITE" />
                 <ImageView fx:id="item_style_change" fitHeight="28.0" fitWidth="37.0" layoutX="183.0" layoutY="6.0" pickOnBounds="true" preserveRatio="true" onMouseClicked="#itemStyleChange">
                     <image>
-                        <Image url="/MDicon/sadsa.png" />
+                        <Image url="/sample/resources/MDicon/sadsa.png" />
                     </image>
                 </ImageView>
             </children>
