--- a/src/sample/FXML/data_setting.fxml
+++ b/src/sample/FXML/data_setting.fxml
@@ -69,7 +69,7 @@
                <graphic>
                   <ImageView fitHeight="18.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="/MDicon/back.png" />
+                        <Image url="/sample/resources/MDicon/back.png" />
                      </image>
                   </ImageView>
                </graphic>
@@ -89,7 +89,7 @@
       </Label>
       <ImageView fitHeight="28.0" fitWidth="31.0" layoutX="177.0" layoutY="153.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="/MDicon/type.png" />
+            <Image url="/sample/resources/MDicon/type.png" />
          </image>
       </ImageView>
       <ChoiceBox fx:id="type_choice" layoutX="269.0" layoutY="153.0" prefHeight="27.0" prefWidth="63.0" />
